--- a/YourFuneral/www/index.html
+++ b/YourFuneral/www/index.html
@@ -114,136 +114,136 @@
         </div>
     </div>
 
-        <div class="modal fade" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content framed">
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="exampleModalLabel">Map</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">X</span>
-                        </button>
-                    </div>
-                    <div class="map-modal-body">
-
-                    </div>
+    <div class="modal fade" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content framed">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="exampleModalLabel">Map</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="map-modal-body">
 
                 </div>
+
             </div>
         </div>
-        <div class="modal fade" id="stats-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content framed">
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="exampleModalLabel">Stats</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">X</span>
-                        </button>
-                    </div>
-                    <div class="stats-modal-body">
-
-                    </div>
+    </div>
+    <div class="modal fade" id="stats-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content framed">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="exampleModalLabel">Stats</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="stats-modal-body">
 
                 </div>
+
             </div>
         </div>
-        <div class="modal fade" id="inventory-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content framed">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Inventory</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">X</span>
-                        </button>
-                    </div>
-                    <div class="inventory-modal-body">
+    </div>
+    <div class="modal fade" id="inventory-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content framed">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Inventory</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="inventory-modal-body">
 
 
-                        <div class="panel-group " id="accordion">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#Useables">Useables</a>
-                                    </h4>
-                                </div>
-                                <div id="Useables" class="panel-collapse collapse in">
-                                    <div class="panel-body">
-                                        <ul class="inventory-list useables-list"></ul>
-                                    </div>
-                                </div>
+                    <div class="panel-group " id="inventory-accordion">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#inventory-accordion" href="#Useables">Useables</a>
+                                </h4>
                             </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#Treasures">Treasures</a>
-                                    </h4>
+                            <div id="Useables" class="panel-collapse collapse in">
+                                <div class="panel-body">
+                                    <ul class="inventory-list useables-list"></ul>
                                 </div>
-                                <div id="Treasures" class="panel-collapse collapse">
-                                    <div class="panel-body">
-                                        <ul class="inventory-list treasures-list"></ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#Weapons">Weapons</a>
-                                    </h4>
-                                </div>
-                                <div id="Weapons" class="panel-collapse collapse">
-                                    <div class="panel-body">
-                                        <ul class="inventory-list weapons-list"></ul>
-
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#Food">Food</a>
-                                    </h4>
-                                </div>
-                                <div id="Food" class="panel-collapse collapse">
-                                    <div class="panel-body">
-                                        <ul class="inventory-list food-list"></ul>
-
-                                    </div>
-                                </div>
-
                             </div>
                         </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#inventory-accordion" href="#Treasures">Treasures</a>
+                                </h4>
+                            </div>
+                            <div id="Treasures" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <ul class="inventory-list treasures-list"></ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#inventory-accordion" href="#Weapons">Weapons</a>
+                                </h4>
+                            </div>
+                            <div id="Weapons" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <ul class="inventory-list weapons-list"></ul>
 
+                                </div>
+                            </div>
 
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#inventory-accordion" href="#Food">Food</a>
+                                </h4>
+                            </div>
+                            <div id="Food" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <ul class="inventory-list food-list"></ul>
+
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
 
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="monster-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog " role="document">
+            <div class="modal-content framed">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Monster</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="monster-modal-body modal-body">
+                    ID: <span class="monster-info-id"></span> <br />
+                    Name: <span class="monster-info-name"></span> <br />
+                    Type: <span class="monster-info-type" /></span> <br />
+                    HP: <span class="monster-info-hp" /></span> <br />
+                    Atk: <span class="monster-info-atk" /></span> <br />
+                    Def: <span class="monster-info-def" /></span> <br />
+                    <span class="monster-info-prediction" /></span> <br />
+                </div>
+                <button type="button" class="btn rpgui-button.golden fight-monster">Fight</button>
+                <div class="battle-console">
                 </div>
             </div>
         </div>
-
-        <div class="modal fade" id="monster-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog " role="document">
-                <div class="modal-content framed">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Monster</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">X</span>
-                        </button>
-                    </div>
-                    <div class="monster-modal-body modal-body">
-                        ID: <span class="monster-info-id"></span> <br />
-                        Name: <span class="monster-info-name"></span> <br />
-                        Type: <span class="monster-info-type" /></span> <br />
-                        HP: <span class="monster-info-hp" /></span> <br />
-                        Atk: <span class="monster-info-atk" /></span> <br />
-                        Def: <span class="monster-info-def" /></span> <br />
-                        <span class="monster-info-prediction" /></span> <br />
-                    </div>
-                    <button type="button" class="btn rpgui-button.golden fight-monster">Fight</button>
-                    <div class="battle-console">
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
     <div class="modal fade" id="npc-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog " role="document">
             <div class="modal-content framed">
@@ -254,13 +254,37 @@
                     </button>
                 </div>
                 <div class="npc-modal-body modal-body">
+                    <div class="npc-message"></div>
+                        <div class="panel-group " id="merchant-accordion">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#merchant-accordion" href="#buy-list">For Sale</a>
+                                    </h4>
+                                </div>
+                                <div id="buy-list" class="panel-collapse collapse in">
+                                    <div class="panel-body merchant-buy-list">
 
-                </div>
-                <button type="button" class="btn rpgui-button.golden fight-monster">Fight</button>
-                <div class="battle-console">
-                </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#merchant-accordion" href="#Treasures">To Sell</a>
+                                    </h4>
+                                </div>
+                                <div id="sell-list" class="panel-collapse collapse">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+            </div>
             </div>
         </div>
+    </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
