--- a/YourFuneral/www/index.html
+++ b/YourFuneral/www/index.html
@@ -80,10 +80,6 @@
                     <div class="grid-square ceiling"></div>
                 </div>
             </div>
-            <div class="">
-                <div class="console framed" />
-            </div>
-
         </div>
         <div class="framed hud">
             <div class="hp-wrapper">
@@ -111,6 +107,9 @@
             <span class="show-stats" data-toggle="modal" data-target="#stats-modal">Stats</span>
             |
             <span class="show-inventory" data-toggle="modal" data-target="#inventory-modal">Inventory</span>
+        </div>
+        <div class="">
+            <div class="console framed" />
         </div>
     </div>
 
@@ -140,7 +139,14 @@
                     </button>
                 </div>
                 <div class="stats-modal-body">
-
+                    <ul class="player-stats">
+                        <li>Attack: <span class="stats-atk"></span></li>
+                        <li>Defence: <span class="stats-def"></span></li>
+                        <li>Speed: <span class="stats-spd"></span></li>
+                        <li>Agility: <span class="stats-agile"></span></li>
+                        <li>Level: <span class="stats-level"></span></li>
+                        <li>XP: <span class="stats-xp"></span></li>
+                    </ul>
                 </div>
 
             </div>
@@ -156,9 +162,10 @@
                     </button>
                 </div>
                 <div class="inventory-modal-body">
-
+                    <p class="item-description"></p>
 
                     <div class="panel-group " id="inventory-accordion">
+
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
@@ -186,12 +193,12 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#inventory-accordion" href="#Weapons">Weapons</a>
+                                    <a data-toggle="collapse" data-parent="#inventory-accordion" href="#Equipments">Equipments</a>
                                 </h4>
                             </div>
-                            <div id="Weapons" class="panel-collapse collapse">
+                            <div id="Equipments" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <ul class="inventory-list weapons-list"></ul>
+                                    <ul class="inventory-list equipment-list"></ul>
 
                                 </div>
                             </div>
@@ -255,37 +262,55 @@
                 </div>
                 <div class="npc-modal-body modal-body">
                     <div class="npc-message"></div>
-                        <div class="panel-group " id="merchant-accordion">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#merchant-accordion" href="#buy-list">For Sale</a>
-                                    </h4>
-                                </div>
-                                <div id="buy-list" class="panel-collapse collapse in">
-                                    <div class="panel-body merchant-buy-list">
+                    <div class="panel-group " id="merchant-accordion">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#merchant-accordion" href="#buy-list">For Sale</a>
+                                </h4>
+                            </div>
+                            <div id="buy-list" class="panel-collapse collapse in">
+                                <div class="panel-body merchant-buy-list">
 
-                                    </div>
                                 </div>
                             </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#merchant-accordion" href="#Treasures">To Sell</a>
-                                    </h4>
-                                </div>
-                                <div id="sell-list" class="panel-collapse collapse">
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#merchant-accordion" href="#sell-list">To Sell</a>
+                                </h4>
+                            </div>
+                            <div id="sell-list" class="panel-collapse collapse">
+                                <div class="panel-body sell-list">
 
                                 </div>
                             </div>
                         </div>
                     </div>
-
-            </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="quantity-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog " role="document">
+            <div class="modal-content framed">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Quantity</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="quantity-modal-body modal-body">
+            <span class="item-name"></span>&nbsp; <input type="number" class="item-quantity" value="1" />
+                </div>
+                <div class="btn confirm-sale">Sell</div>
+                <div class="merchant-offer"></div>
+            </div>
+        </div>
     </div>
+
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
